# beelay

./: .gitignore  Cargo.toml  LICENSE  README.md  beelay-default.toml  beelay.toml
assets/css/: index.html.in
src/: api.rs  common.rs  core.rs  frontend.rs  lib.rs  main.rs  mqtt_client.rs  old_core.rs  old_main.rs  old_main2.rs  service.rs
src/frontend-assets/: button-element-template.html.in  gui-template.html.in  main.css
systemd/: beelay.service
test/run/: example_switch1  example_switch2
