[package]
name = "beelay"
version = "0.2.1"
edition = "2021"
authors = ["Drew Buckley <me@drew-buckley.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
toml = "0.5.9"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.18", features = ["derive"] }
url = "2.2"
log = "0.4"
env_logger = "0.9"
form_urlencoded = "1.0.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "*"
rumqttc = "0.23"
async-channel = "2.1"
libsystemd = {version = "0.7", optional = true}
const_format = "0.2"

[features]
default = []
systemd = ["libsystemd"]
